# berome-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
berome/: __init__.py  cli.py  config.py  discord_bot.py  discord_runner.py  guild_data.py  session.py
berome/agents/: __init__.py  base.py  chat_agent.py  code_agent.py  github_agent.py  orchestrator.py  research_agent.py
berome/integrations/: __init__.py  github.py
berome/prompts/: __init__.py  cli_system.md  discord_system.md
berome/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py
berome/tools/: __init__.py  definitions.py  executor.py  safety.py
berome/ui/: __init__.py  components.py  theme.py
tests/: test_agents.py  test_config.py  test_providers.py
