[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "berome"
version = "0.1.0"
description = "Berome – CLI AI personal assistant powered by Claude (or Ollama)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.34.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "PyGithub>=2.3.0",
    "gitpython>=3.1.43",
    "httpx>=0.27.0",
    "ddgs>=0.1.0",
    "prompt_toolkit>=3.0.47",
]

[project.optional-dependencies]
ollama = ["ollama>=0.3.0"]
discord = ["discord.py>=2.3.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.scripts]
berome = "berome.cli:app"
berome-discord = "berome.discord_runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["berome*"]

[tool.setuptools.package-data]
berome = ["prompts/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
